test/bad/classes/method05.px

class Test def
    func f(x: Int) def
        skip

test = Test()
test.f = test.f
